content/dota_addons/lasthitchallenge/panorama/styles/custom_game/options.css
.CustomHudRoot
{
    width: 100%;
    height: 100%;
}

.ControlPanel
{
    transform: translateX( 5px ) translateY( -100px );
    vertical-align: middle;
    horizontal-align: right;
    padding: 4px;
    padding-left: 0px;
    flow-children: right;

    transition-property: background-color, transform;
	transition-duration: 0.35s;
	transition-timing-function: ease-in-out;
}

.ControlPanelContainer
{
    flow-children: right;
    vertical-align: middle;
    horizontal-align: left;
    height: 660px;
    width: 160px;
    font-size: 16;
    background-color: #181818dd;
    border: 2px solid #222222;
   	box-shadow: #000000aa -4px -4px 8px 8px;
}

#ControlPanelSlideThumb
{
	width: 32px;
	height: 96px;
	transform: translateX( 0px );
    background-color: #181818cc;
    border-top-left-radius: 12px;
    border-bottom-left-radius: 12px;
   	box-shadow: #00000055 -4px -4px 8px 8px;
	vertical-align: middle;
}

.RightArrowButtonIcon
{
	width: 16px;
	height: 16px;
	vertical-align: middle;
	horizontal-align: right;
	background-image: url("file://{images}/control_icons/double_arrow_left.png");
	background-position: 0% 50%;
	background-size: contain;
	background-repeat: no-repeat;
	wash-color: #91aba6;

	transform: rotateZ(180deg) translateX( -9px );
	
	transition-property: transform, wash-color;
	transition-delay: 0.0s;
	transition-duration: 0.25s;
	transition-timing-function: ease-in-out;
}

#ControlPanelSlideThumb:hover
{
	background-color: #383838cc;
}

#ControlPanelSlideThumb:hover .RightArrowButtonIcon
{
	transform: rotateZ(180deg) translateX( 3px );
	wash-color: white;
}

.ControlPanel.Minimized .RightArrowButtonIcon
{
	transform: translateX( -6px );
}

.ControlPanel.Minimized #ControlPanelSlideThumb:hover .RightArrowButtonIcon
{
	transform: translateX( -3px );
	wash-color: white;
}

.ControlPanel.Minimized
{
    transform: translateX( 165px ) translateY( -100px );
}

.ControlPanelContainer Label
{
	flow-children: down;

	horizontal-align: left;
	font-size: 24;	
	color: #444444;
	margin-top: 6px;
	margin-bottom: 6px;
	margin-left: 6px;
	margin-right: 6px;
}

.ControlPanelContainer .Category Label
{
	horizontal-align: left;
	margin-left: 0%;
	margin-top: 2px;
	font-size: 20;
	color: #888888;
	text-transform: uppercase;
	letter-spacing: 1px;
	text-align: left;
	min-width: 100%;
}

.ControlPanelContainer #Maximized
{
	flow-children: down;
	visibility:visible;
}



.ControlPanelContainer #Maximized .MinimizeButton
{
    width: 100%;
    background-color: #181818;
    border: 2px solid #111111;
	visibility:visible;
}


.ControlPanelContainer #Maximized .MinimizeButton Label
{
	font-size: 18;
	color: #666666;
}

.MinimizeButton
{
	horizontal-align: right;
}

.MinimizeButton Label
{
	font-size: 16;
	color: #666666;
}

.MinimizeButton:hover Label
{
	font-size: 16;
	color: #aaaaaa;
}

.Category
{
	flow-children: down;
	border-style: solid;
	border-color: #00000022;
	border-width: 0%;
	padding: 5px;
	background-color: #11111166;
}

.Row
{
	flow-children: right;
	margin-top: 0%;
	margin-bottom: 0%;
	margin-right: 0%;
	width: 100%;
}

.Category .Row Label
{
	horizontal-align: right;
	margin-left: 5px;
	margin-right: 5px;
	font-size: 18;
	color: #888888;
}

.Category #cs, #lh, #dn, #cs_accuracy, #lh_accuracy, #dn_accuracy
{
	text-align: center;
	margin-left: 5px;
	margin-right: 5px;
	font-size: 20;
	font-weight: bold;
	color: #888888;
}

.Row #OptionButton
{
	
}

.OptionButton
{
	background-color: gradient( linear, 0% 0%, 0% 100%, from( #333333), to( #444444 ) );

	height: 36px;
	width: 140px;

	margin-top: 3px;
	margin-bottom: 3px;
	margin-left: 3px;
	margin-right: 3px;

    border-style: solid;
    border-width: 1px;

    border-top-color: #444444;
    border-left-color: #494949;
    border-bottom-color: #111111;
    border-right-color: #404040;

    transition-property: background-color;
    transition-duration: 0.15s;
    transition-timing-function: linear;
}

.Category .Row .OptionButton#FieldButton
{
	height: 40px;
	width: 140px;
}

.Category .OptionButton Label
{
    margin-top: 8px;
    text-align: center;
    color: #cccccc;
    font-size: 16;
    font-weight: thin;
    text-transform: none;
    letter-spacing: 0px;
}

.Category .OptionButton:hover
{
    background-color: gradient( linear, 0% 0%, 0% 100%, from( #444444 ), to( #555555 ) );
}

.Category .OptionButton:hover Label
{
    //color: #cccccc;
}

.Category .OptionButton:active
{
    background-color: gradient( linear, 0% 0%, 0% 100%, from( #888888 ), to( #aaaaaa ) );
	pre-transform-scale2d: 1.02;
}

.Category .OptionButton:active Label
{
    //color: #eeeeee;
}

.Category .OptionButton:selected
{
	background-color: gradient( linear, 0% 0%, 0% 100%, from( #777777 ), to( #999999 ) );
}

#cs, #lh, #dn, #cs_accuracy, #lh_accuracy, #dn_accuracy
{
	animation-duration: 0.3s;
  	animation-timing-function: linear;
  	animation-iteration-count: 3;
}

.cs_anim #cs
{
    visibility: visible;
    animation-name: record;
}

.lh_anim #lh
{
    visibility: visible;
    animation-name: record;
}

.dn_anim #dn
{
    visibility: visible;
    animation-name: record;
}

.cs_accuracy_anim #cs_accuracy
{
    visibility: visible;
    animation-name: record;
}

.lh_accuracy_anim #lh_accuracy
{
    visibility: visible;
    animation-name: record;
}

.dn_accuracy_anim #dn_accuracy
{
    visibility: visible;
    animation-name: record;
}

@keyframes 'record'
{
    50%
    {
        transform:  scaleX(1.50) scaleY(1.50);
    }
}

